# z3

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  codespaces_script_dependencies.sh
src/: CameraManager.cpp  CameraManager.h  CollisionManager.cpp  CollisionManager.h  DynamicArray.cpp  DynamicArray.h  Engine.cpp  Engine.h  EntityManager.cpp  EntityManager.h  GameManager.cpp  GameManager.h  InputManager.cpp  InputManager.h  MaterialManager.cpp  MaterialManager.h  MemoryManager.cpp  MemoryManager.h  MyImgui.cpp  MyImgui.h  PhysicsManager.cpp  PhysicsManager.h  PhysicsTest.cpp  PhysicsTest.h  RenderManager.cpp  RenderManager.h  TextureManager.cpp  TextureManager.h  TimeManager.cpp  TimeManager.h  WindowManager.cpp  WindowManager.h  constants.h  data_types.h  main.cpp
src/game/: CameraManager.cpp  CameraManager.h  GameObject.cpp  GameObject.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  ModelPushConstant.h  MouseManager.cpp  MouseManager.h  Texture.cpp  Texture.h  UniformBufferObject.h
src/game/components/: CollisionComponent.cpp  CollisionComponent.h  Component.cpp  Component.h  PhysicsComponent.cpp  PhysicsComponent.h  PlayerController.cpp  PlayerController.h  RenderComponent.cpp  RenderComponent.h  TransformComponent.cpp  TransformComponent.h
src/game/editor/: LevelEditor.cpp  LevelEditor.h  SerializationHelper.h  myImgui_LevelEditor.cpp  myImgui_LevelEditor.h
src/game/entities/: Entity.cpp  Entity.h  EntityTypes.cpp  EntityTypes.h  FloorEntity.cpp  FloorEntity.h  GrandPianoEntity.cpp  GrandPianoEntity.h  PlayerEntity.cpp  PlayerEntity.h
src/game/levels/: Untitled.zlvl  aaa.zlvl  adsf.zlvl  tribal.zlvl  tribalaaa.zlvl
src/include/: tiny_obj_loader.h
src/math/: math.h  matrix.h  quaternion.h  rand.h  scalar.h  vector.h
src/render/shaders/: compile.sh  vkShader_3d.vert  vkShader_collision.frag  vkShader_collision.vert
src/render/shaders/compiled/: vkShader_collision_frag.spv  vkShader_collision_vert.spv
src/tools/: ComponentFactory.cpp  ComponentFactory.h  EntityFactory.cpp  EntityFactory.h  GameObjectFactory.cpp  GameObjectFactory.h  MaterialFactory.cpp  MaterialFactory.h  MeshFactory.cpp  MeshFactory.h  PhysicsFactory.cpp  PhysicsFactory.h  PlayerEntityHelper.h  TextureFactory.cpp  TextureFactory.h
